# coresynth

./: .gitignore  README.md  saw_vco.circuitjs.txt  wavefolder.circuitjs.txt
fw/: Makefile  docker-compose.yml
fw/.docker/: fixuid.yml
fw/Src/: main.c
fw/glue/: glue.c  glue.h
fw/rust_lib/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
fw/rust_lib/src/: config.rs  ctypes.rs  glue.rs  leds.rs  lib.rs  num.rs  peripheral.rs
fw/rust_lib/src/encoder/: mod.rs
fw/rust_lib/src/hal/: mod.rs  uart_printf.rs
fw/rust_lib/src/hal/stm32_hal/: bindings.rs  gpio_pin.rs  mod.rs  release.rs  spi.rs  stm32_uart.rs
fw/rust_lib/src/os/: closure.rs  mod.rs  timers.rs
fw/rust_lib/src/os/cmsis_os/: bindings.rs  mail.rs  mod.rs  mutex.rs  semaphore.rs  task.rs  time.rs
fw/rust_lib/src/os/linux_os/: mail.rs  mod.rs  mutex.rs  semaphore.rs  task.rs  time.rs
fw/rust_lib/src/store/: action.rs  generic.rs  mod.rs
fw/stm32f103c8t6/: Makefile  deploy.sh  fw.ioc
fw/stm32f103c8t6/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
fw/stm32f103c8t6/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
