[package]
name = "coresynth"
version = "0.1.0"
authors = ["Mikhail Cheshkov <mcheshkov@gmail.com>", "Andrew Strokov <mail@s3f.ru>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
cmsis-os = []
linux-os = []
stm32-hal = []
stub-hal = [
    'byteorder',
    'bytes',
    'colored',
    'derive-new',
    'hex-slice',
    'rmp-serde',
    'serde',
    'serde_derive',
]

[dependencies]
bitfield-register = "0.2.0"
bitfield-register-macro = "0.2.0"
cfg-if = "0.1.9"
micromath = "0.4.0"

byteorder = { version = "1.3.2", optional = true }
bytes = { version = "0.4.12", optional = true }
colored = { version = "1.8.0", optional = true }
derive-new = { version = "0.5.7", optional = true }
hex-slice = { version = "0.1.4", optional = true }
rmp-serde = { version = "0.13.7", optional = true }
serde = { version = "1.0.97", optional = true }
serde_derive = { version = "1.0.97", optional = true }


[build-dependencies]
bindgen = "0.50.0"
cbindgen = "0.9.0"

[profile.dev]
lto = true
opt-level = 'z'

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
